@@ -1,0 +1,30 @@
+query: EXPLAIN
+CREATE TEMPORARY FUNCTION test_translate AS 'org.apache.hadoop.hive.ql.udf.generic.GenericUDFTestTranslate'
+ABSTRACT SYNTAX TREE:
+  (TOK_CREATEFUNCTION test_translate 'org.apache.hadoop.hive.ql.udf.generic.GenericUDFTestTranslate')
+
+STAGE DEPENDENCIES:
+  Stage-0 is a root stage
+
+STAGE PLANS:
+  Stage: Stage-0
+
+
+query: CREATE TEMPORARY FUNCTION test_translate AS 'org.apache.hadoop.hive.ql.udf.generic.GenericUDFTestTranslate'
+query: CREATE TABLE dest1(c1 STRING, c2 STRING, c3 STRING, c4 STRING, c5 STRING, c6 STRING, c7 STRING)
+query: FROM src 
+INSERT OVERWRITE TABLE dest1 
+SELECT 
+    test_translate('abc', 'a', 'b'),
+    test_translate('abc', 'ab', 'bc'),
+    test_translate(NULL, 'a', 'b'),
+    test_translate('a', NULL, 'b'),
+    test_translate('a', 'a', NULL),
+    test_translate('abc', 'ab', 'b'),
+    test_translate('abc', 'a', 'ab')
+Input: default/src
+Output: default/dest1
+query: SELECT dest1.* FROM dest1 LIMIT 1
+Input: default/dest1
+Output: file:/home/zhoumin/hive-trunk/build/ql/tmp/997095758/10000
+bbc	bcc	NULL	NULL	NULL	bc	abc
