@@ -1,0 +1,21 @@
+query: EXPLAIN
+CREATE TEMPORARY FUNCTION test_max AS 'org.apache.hadoop.hive.ql.udf.UDAFTestMax'
+ABSTRACT SYNTAX TREE:
+  (TOK_CREATEFUNCTION test_max 'org.apache.hadoop.hive.ql.udf.UDAFTestMax')
+
+STAGE DEPENDENCIES:
+  Stage-0 is a root stage
+
+STAGE PLANS:
+  Stage: Stage-0
+
+
+query: CREATE TEMPORARY FUNCTION test_max AS 'org.apache.hadoop.hive.ql.udf.UDAFTestMax'
+query: CREATE TABLE dest1(col INT)
+query: FROM src INSERT OVERWRITE TABLE dest1 SELECT test_max(length(src.value))
+Input: default/src
+Output: default/dest1
+query: SELECT dest1.* FROM dest1
+Input: default/dest1
+Output: file:/home/zhoumin/hive-trunk/build/ql/tmp/523260903/10000
+7
